# momentum-projects-dashboard

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  CODEX.md  Makefile  README.md  docker-compose.reload.yml  docker-compose.yml
ADR/: README.md  (+3 more)
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260513_0001_create_projects_table.py  20260513_0002_create_tasks_and_time_logs_tables.py  (+3 more)
backend/app/models/: activity_type.py  project.py  task.py  time_log.py  venture.py  venture_category_label.py
backend/app/routers/: activity_types.py  health.py  projects.py  tasks.py  venture_category_labels.py  ventures.py
backend/app/schemas/: activity_type.py  pagination.py  project.py  task.py  venture.py  venture_category_label.py
backend/app/services/: activity_types.py  pagination.py  projects.py  task_guards.py  tasks.py  venture_category_labels.py  ventures.py
backend/app/tests/: conftest.py  test_activity_types_and_time_logs_phase_1_6_6.py  test_archive_mutation_matrix.py  test_health.py  test_pagination_helpers_phase_f.py  test_phase_1_6_12_regression_integration.py  test_phase_1_6_migration_groundwork.py  test_phase_f_opt_in_pagination.py  test_projects.py  test_projects_board_status.py  test_projects_phase_1_6_4.py  test_tasks.py  test_time_log_schema_upgrade.py  test_venture_category_labels.py  test_ventures.py  venture_test_utils.py
(+239 files in other folders)
